# dio--rust-rocket-carrinho

./: Cargo.toml  Dockerfile  README.md
db/: rusqlite.db
src/: main.rs
src/config/: cnn.rs
src/controllers/: clientes_controller.rs  compras_controller.rs  home_controller.rs
src/dtos/: mod.rs
src/models/: cliente.rs  mod.rs  pedido.rs  pedido_produto.rs  produto.rs
src/modelviews/: mod.rs  pedido_view.rs  produto_view.rs
src/repositorios/: cliente_repositorio.rs  pedido_produto_repositorio.rs  pedido_repositorio.rs  produto_repositorio.rs
src/servicos/: cliente_servico.rs  mod.rs  pedido_servico.rs  produto_servico.rs
