[package]
name = "rocket-simples"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34.0", features = ["chrono"] }
dotenv = "0.15.0"
